--- a/app/src/main/res/drawable/icon_app_foreground.xml
+++ b/app/src/main/res/drawable/icon_app_foreground.xml
@@ -3,7 +3,7 @@
     android:height="108dp"
     android:viewportWidth="41.37931"
     android:viewportHeight="41.37931"
-    android:tint="#2D87C7">
+    android:tint="#379551">
   <group android:translateX="8.689655"
       android:translateY="8.689655">
       <path
