--- a/app/src/main/res/layout/view_pager.xml
+++ b/app/src/main/res/layout/view_pager.xml
@@ -15,8 +15,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
-            app:tabIndicatorColor="@color/colorWhite"
-            app:tabSelectedTextColor="@color/colorWhite"
+            app:tabIndicatorColor="@color/colorTabIndicator"
+            app:tabSelectedTextColor="@color/colorTabIndicator"
             app:tabTextColor="@color/colorBackground" />
 
     </com.google.android.material.appbar.AppBarLayout>
