--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,4 +5,25 @@
         <item>83 Группа</item>
         <item>84 Группа</item>
     </array>
+
+    <array name="mdcolor_400">
+        <item name="red_400" type="color">#FABFBB</item>
+        <item name="pink_400" type="color">#F87DA7</item>
+        <item name="purple_400" type="color">#A859B6</item>
+        <item name="deep_purple_400" type="color">#7E5CB9</item>
+        <item name="indigo_400" type="color">#5C6AB6</item>
+        <item name="blue_400" type="color">#77BCF3</item>
+        <item name="light_blue_400" type="color">#7AD3FC</item>
+        <item name="cyan_400" type="color">#6ED0DD</item>
+        <item name="teal_400" type="color">#4FA098</item>
+        <item name="green_400" type="color">#5BB65F</item>
+        <item name="light_green_400" type="color">#9AC965</item>
+        <item name="orange_400" type="color">#F5D77C</item>
+        <item name="deep_orange_400" type="color">#F5C57E</item>
+        <item name="brown_400" type="color">#F3977A</item>
+        <item name="grey_400" type="color">#5BA8A8</item>
+        <item name="blue_grey_400" type="color">#9BD4F1</item>
+    </array>
+
+
 </resources>
