--- a/app/src/main/res/layout/item_dashboard.xml
+++ b/app/src/main/res/layout/item_dashboard.xml
@@ -17,6 +17,16 @@
         tools:layout_editor_absoluteY="0dp">
 
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/a_hands" />
+
         <TextView
             android:id="@+id/title"
             android:layout_width="0dp"
@@ -25,10 +35,10 @@
             android:padding="6dp"
             android:textColor="@color/colorWhite"
             android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             tools:text="Внимание! Группа 81, 82, 83" />
 
         <TextView
@@ -51,6 +61,7 @@
 
         <TextView
             android:id="@+id/description"
+            style="@style/textPrimary"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -59,9 +70,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title"
-            tools:text="Подробности уточняйте у старост группы"
-            style="@style/textPrimary" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            tools:text="Подробности уточняйте у старост группы" />
 
         <TextView
             android:id="@+id/time"
