--- a/app/src/main/res/layout/item_header_notify.xml
+++ b/app/src/main/res/layout/item_header_notify.xml
@@ -13,7 +13,7 @@
     <TextView
         android:id="@+id/description_header"
         style="@style/textPrimary"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
