--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,2 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <!-- app palette -->
+    <color name="colorPrimary">#084E40</color>
+    <color name="colorPrimaryDark">#052E26</color>
+    <color name="colorAccent">#9C902B</color>
+
+    <color name="colorError">#FFFF0000</color>
+    <color name="colorTabIndicator">#818120</color>
+
+    <color name="colorBackground">#1D4685</color>
+    <color name="colorCardBackground">#8C9EFF</color>
+
+    <color name="colorWhite">#090101</color>
+
+    <color name="dark_background">#1D1D1D</color>
+
+    <!--цвет текста primary и secondary в меню-->
+    <color name="textColorPrimary">#333333</color>
+    <color name="textColorSecondary">#8A8989</color>
+    <color name="textColorLink">#16a085</color>
+
+
+
+    <color name="tab_background_selected">#16a085</color>
+    <color name="tab_background_unselected">#8B8A8A</color>
+
+</resources>
