--- a/app/src/main/res/layout/error_view.xml
+++ b/app/src/main/res/layout/error_view.xml
@@ -5,6 +5,7 @@
     android:id="@+id/cardNotification"
     style="@style/myCardViewStyle"
     android:layout_margin="@dimen/card_view_layout_margin"
+
     android:foreground="?android:attr/selectableItemBackground"
     android:visibility="gone"
     app:cardCornerRadius="@dimen/card_view_corner_radius"
@@ -19,28 +20,34 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
 
-        <ImageView
-            android:id="@+id/imageView"
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottie"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:adjustViewBounds="false"
+            android:cropToPadding="false"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/error_view_bear" />
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/lottie_error_animation" />
 
         <TextView
             android:id="@+id/title_header"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
             android:text="@string/no_server_response"
+            android:textAlignment="center"
             android:textColor="@color/colorError"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="@+id/imageView" />
+            app:layout_constraintStart_toEndOf="@+id/lottie"
+            app:layout_constraintTop_toTopOf="@+id/lottie" />
 
 
         <TextView
@@ -49,15 +56,12 @@
             android:layout_width="0dp"
 
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="8dp"
             android:text="@string/no_internet_connection"
-            android:textAlignment="center"
             android:textAllCaps="false"
             android:textSize="14sp"
+            app:layout_constraintBottom_toTopOf="@+id/button_error"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/lottie"
             app:layout_constraintTop_toBottomOf="@+id/title_header" />
 
         <Button
@@ -65,15 +69,13 @@
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginBottom="2dp"
             android:alpha=".8"
             android:text="@string/refresh_data"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView" />
+            app:layout_constraintStart_toEndOf="@+id/lottie" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
