--- a/app/src/main/res/layout/dialog_rings.xml
+++ b/app/src/main/res/layout/dialog_rings.xml
@@ -42,7 +42,8 @@
 
                 <TextView
                     android:id="@+id/text_description"
-                    style="@style/textSecondary"
+                    style="@style/textPrimary"
+                    android:padding="8dp"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
@@ -55,17 +56,6 @@
                     app:layout_constraintTop_toTopOf="@+id/lottie"
                     tools:text="1 Пара 16-00" />
 
-<!--                <Button-->
-<!--                    android:id="@+id/buttonAlarm"-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginStart="16dp"-->
-<!--                    android:layout_marginEnd="16dp"-->
-<!--                    android:layout_marginBottom="16dp"-->
-<!--                    android:text="Установить напоминание"-->
-<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                    app:layout_constraintEnd_toEndOf="parent"-->
-<!--                    app:layout_constraintStart_toStartOf="parent" />-->
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
